--- a/survey-webapp/src/main/webapp/css/main.css
+++ b/survey-webapp/src/main/webapp/css/main.css
@@ -5,4 +5,13 @@
     body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
     }
+    .focus-in {
+        color: #468847;
+		background-color: #DFF0D8;
+		border-color: #D6E9C6;
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+		-webkit-border-radius: 4px;
+		-moz-border-radius: 4px;
+		border-radius: 4px;
+	}
 }
